src/main/kubernetes/payroll-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: adcs-cluster-issuer
    cert-manager.io/issuer-group: adcs.certmanager.csf.nokia.com
    cert-manager.io/issuer-kind: ClusterAdcsIssuer
  name: payroll
  namespace: demo
spec:
  ingressClassName: apisix
  rules:
    - host: payroll.itcpdev.mrr.ste.com
      http:
        paths:
          - backend:
              service:
                name: payroll
                port:
                  number: 80
            path: /
            pathType: Prefix


  tls:
    - hosts:
        - payroll.itcpdev.mrr.ste.com
      secretName: itcp-payroll-tls
